--- a/style.css
+++ b/style.css
@@ -1,20 +1,44 @@
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap";
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
     color: #e3e3e3;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 body {
     background-color: rgba(35,37,41,255);
 }
 
+h1 {
+    text-align: center;
+    color: #e3e3e3;
+    font-size: 3em;
+    margin-bottom: 40px;
+}
+
 .layout {
     display: grid;
-    grid-template-columns: 13vw 86vw;
-    grid-template-rows: 7vh 93vh 7vh;
+    grid-template-columns: 14vw 84.7vw;
+    grid-template-rows: 7vh auto 7vh; /* La fila del main ahora tiene 'auto' para ajustar según el contenido */
+    min-height: 100vh; /* Asegura que la página ocupe al menos el 100% de la altura de la ventana */
+}
+
+@media (max-width: 1024px) {
+    aside {
+        display: none;
+    }
+
+    .layout {
+        grid-template-columns: 0 100vw;
+    }
+}
+
+main {
+    overflow: auto; /* Permite que el contenido crezca sin cortar nada */
 }
 
 header {
@@ -58,11 +82,15 @@ aside {
     border-right: 1px solid rgba(53,56,63,255);
     display: flex;
     flex-direction: column;
+    position: sticky;
+    top: 0;
+    height: 100vh;
+    overflow-y: auto;
 }
 
 aside > ul {
     padding-top: 40px;
-    margin-left: 10%;
+    margin-left: 5%;
     list-style-type: disc;
 }
 
@@ -80,7 +108,7 @@ aside > ul li {
     display: block;
     padding: 10px;
     font-size: 14px;
-    font-weight: bold;
+    font-weight: 500;
 }
 
 aside > ul li a:hover {
@@ -88,16 +116,117 @@ aside > ul li a:hover {
 }
 
 .container {
-    padding: 80px 20%;
-}
-
-h1 {
-    text-align: left;
-    color: #e3e3e3;
+    padding: 20px 20%;
 }
 
 footer {
     background-color: rgba(35,37,41,255);
-    grid-column: 1 / 3;
+    grid-column: 2 / 3;
     border-top: 2px solid rgba(53,56,63,255);
+    text-align: center;
+}
+
+footer p {
+    font-size: 20px;
+}
+
+p {
+    font-size: 15px;
+    margin: 15px 2%;
+}
+
+.areas {
+    margin-top: 10px;
+}
+
+.areas li {
+    list-style-type: none;
+    padding: 2px 2%;
+}
+
+.areas li ul li {
+    padding-top: 5px;
+    padding-left: 30px;
+}
+
+.estados {
+    margin-top: 10px;
+}
+
+.estados li {
+    list-style-type: none;
+    padding: 2px 2%;
+}
+
+.estados li ul li {
+    padding-top: 5px;
+    padding-left: 30px;
+}
+
+#tercero, #cuarto, #quinto, #sexto{
+    margin-top: 15px;
+}
+
+/* Colores de estado */
+
+#colores > li:nth-child(1) > b { color: #FFCCCB; } /* Untracked */
+#colores > li:nth-child(2) > b { color: #90EE90; } /* Unmodified */
+#colores > li:nth-child(3) > b { color: #FFD700; } /* Modified */
+#colores > li:nth-child(4) > b { color: #87CEEB; } /* Staged */
+#colores > li:nth-child(5) > b { color: #9370DB; } /* Commited */
+
+section h3 {
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+section p {
+    margin-left: 50px;
+    margin-top: 10px;
+}
+
+.code {
+    background-color: rgba(41,44,49,255);
+    width: 90%;
+    border-radius: 15px;
+    margin: 0.5vh 0.5vw 0.5vh 7%;
+    padding: 0.5vh 0.5vw;
+}
+
+.code p {
+    margin: 15px 20px;
+}
+
+.code .comentario {
+    color: rgba(98,130,60,255);
+    margin-left: 1vw;
+}
+
+.code .git {
+    color: rgba(254,222,93,255);
+    font-weight: bold;
+}
+
+nav {
+    display: none;
+}
+
+@media (max-width: 1024px) {
+    nav {
+        display: flex;
+        align-items: center;
+        position: sticky;
+        bottom: 0;
+        border-top: 2px solid rgba(53,56,63,255);
+        height: 6vh;
+        background-color: rgba(35,37,41,255);
+    }
+
+    nav > div {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        width: 70%;
+        margin: 0 auto;
+    }
 }
